--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
-    "ethers": "^5.7.2",
     "web-vitals": "^2.1.4",
+    "web3": "^4.1.1",
     "web3modal": "^1.9.12"
   },
   "scripts": {
@@ -45,7 +46,6 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "dotenv": "^16.3.1",
-    
     "hardhat": "^2.17.1",
     "tailwindcss": "^3.3.3"
   }
